# FinQuery

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml
config/: llm.example.json  rag.example.json
scripts/: apply_schema.py  build_rag_index.py  compare_intent_engines.py  evaluate_agent_pipeline.py  evaluate_pdf_extraction.py  evaluate_rag_retrieval.py  evaluate_task2_questions.py  extract_pdf.py  generate_ddl.py  load_company_info.py  manage_postgres.py  promote_staging.py  rebuild_staging.py  show_run_fields.py
src/finquery_agent/: __init__.py  config.py
src/finquery_agent/agent/: __init__.py  planner.py  service.py  tools.py
src/finquery_agent/analysis/: __init__.py  service.py
src/finquery_agent/api/: main.py
src/finquery_agent/db/: __init__.py  ddl.py  engine.py
src/finquery_agent/ingestion/: __init__.py  clean_markdown.py  evaluation.py  financial_staging.py  metadata.py  mineru.py  models.py  pdf_markdown.py  period_derivations.py  pipeline.py  (+2 more)
tests/: conftest.py  test_agent.py  test_answer.py  test_api.py  test_config.py  test_ddl.py  test_evaluation.py  test_extract_pdf_script.py  test_ingestion.py  test_intent_engine.py  test_llm_intent_engine.py  test_metrics.py  test_mineru.py  test_period_derivations.py  test_planner.py  test_promotion.py  test_query_executor.py  test_query_session.py  test_rag.py  test_reranker.py  test_schema_registry.py  test_sql_builder.py
第一批数据/公司基本信息/: 公司基本信息-字段说明.csv  公司基本信息.csv
第一批数据/数据库信息/: 数据库信息-利润表.csv  数据库信息-数据库表名.csv  数据库信息-核心业绩指标表.csv  数据库信息-现金流量表.csv  数据库信息-资产负债表.csv
(+28 files in other folders)
