[project]
name = "finquery-agent"
version = "0.1.0"
description = "Traceable financial-report question answering and analysis system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "sqlglot>=23.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
pdf = [
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
]
rag = [
    "jieba>=0.42",
    "rank-bm25>=0.2",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
